# ds-rag-tool

./: .gitignore  README.md  pyproject.toml
docs/: PROJECT_OVERVIEW.md
src/ds_compare/loaders/: __init__.py  document_loader.py  loader_config.py  local_loader.py
src/ds_compare/models/: __init__.py  documents.py
tests/: test_document_loader.py  test_local_loader.py
tests/test_docs/: button.md  colors.md  modal.md
tests/test_docs/typography/: typography.md
