[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ds-rag-tool"
version = "0.1.0"
authors = [
    { name = "Marissa Huysentruyt", email = "marissahuysentruyt@users.noreply.github.com" }
]
description = "Design system comparison tool"
requires-python = ">=3.12"
dependencies = [
    "pypdf",  # PDF support
    "python-docx",  # Word document support
    "markdown",  # Markdown parsing
    "beautifulsoup4",  # HTML parsing
    "lxml",  # XML/HTML processing
]

[project.optional-dependencies]
dev = [
    "pytest",  # Testing
    "black",  # Code formatting
    "ruff",  # Linting
]

[tool.setuptools.packages.find]
where = ["src"]